Mastermind 2.0, Farbe mehrmals vorkommen

--- a/styles.css
+++ b/styles.css
@@ -50,3 +50,10 @@ circle.antiquewhite {
     fill: antiquewhite;
 }
 
+.rahmen {
+    border: 4px outset yellowgreen;
+}
+
+.borderUebersicht {
+    border: 6px solid black
+}
